[gd_scene load_steps=3 format=3 uid="uid://cm2b38u2aykwl"]

[ext_resource type="Script" path="res://scripts/ui/hud/DebugPanel.gd" id="1_c34i4"]
[ext_resource type="Theme" uid="uid://bscr1jb7qw1i0" path="res://resources/game_settings/GameTheme.tres" id="2_w3r1r"]

[node name="DebugPanel" type="CanvasLayer"]
script = ExtResource("1_c34i4")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 140)
offset_right = 300.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 140.0
grow_horizontal = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "DebugPanel"

[node name="FpsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_w3r1r")

[node name="StateLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_w3r1r")

[node name="PosLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_w3r1r")

[node name="VelLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="GroundLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
